--- a/assets/scss/css/normalize.css
+++ b/assets/scss/css/normalize.css
@@ -348,3 +348,9 @@
   [hidden] {
     display: none;
   }
+
+  .container_page {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
